CLI Commands Runs for NgRx

--- a/angular.json
+++ b/angular.json
@@ -130,6 +130,7 @@
   },
   "defaultProject": "Resturant",
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@ngrx/schematics"
   }
 }
