--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "^11.2.11",
     "@angular/compiler-cli": "~11.0.9",
+    "@ngrx/schematics": "^11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
